Added fork me on github button
Signed-off-by: Juan C. Méndez <jcmendez@alum.mit.edu>

--- a/views/index.erb
+++ b/views/index.erb
@@ -1,5 +1,16 @@
 <html>
+  <head>
+    <link rel="stylesheet" href="css/gh-fork-ribbon.css">
+    <!--[if lt IE 9]>
+        <link rel="stylesheet" href="css/gh-fork-ribbon.ie.css">
+    <![endif]-->
+  </head>
   <body>
+    <div class="github-fork-ribbon-wrapper right">
+      <div class="github-fork-ribbon">
+        <a href="https://github.com/simonwhitaker/github-fork-ribbon-css">Fork me on GitHub</a>
+      </div>
+    </div>
   </body>
 </html>
 
