--- a/views/index.erb
+++ b/views/index.erb
@@ -1,5 +1,6 @@
 <html>
   <head>
+    <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/gh-fork-ribbon.css">
     <!--[if lt IE 9]>
         <link rel="stylesheet" href="css/gh-fork-ribbon.ie.css">
@@ -8,8 +9,11 @@
   <body>
     <div class="github-fork-ribbon-wrapper right">
       <div class="github-fork-ribbon">
-        <a href="https://github.com/simonwhitaker/github-fork-ribbon-css">Fork me on GitHub</a>
+        <a href="https://github.com/bg4us/utterson">Fork me on GitHub</a>
       </div>
+    </div>
+    <div class="content">
+      <%= markdown File.read(File.join(settings.root,'README.md')) %>
     </div>
   </body>
 </html>
